<resources>
    <string name="app_name">Tublessin-Montir</string>
    <string name="login_username_hint">Username</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="gender_prompt">Choose Gender</string>
    <string-array name="gender_arrays">
        <item>L</item>
        <item>P</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="montir_rating">Your Rating</string>
    <string name="phone_number">085712345678</string>
    <string name="cancel">CANCEL</string>
    <string name="selesai">SELESAI</string>
    <string name="open_map">Open MAP</string>
    <string name="logout">LOGOUT</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="profile">Profile</string>
    <string name="sample_email">sampel_email@gmail.com</string>
    <string name="sample_ktp">088988 1231 499 22</string>
    <string name="sample_born_date">1995-12-25</string>
    <string name="sample_city">Jakarta</string>
    <string name="sample_transaction_date">2020-09-06 21:26:16</string>

    <!--Splash Screen-->
    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
        <item name="android:windowBackground">
            @drawable/splash_bg
        </item>
    </style>

    <!--    facebook-->
    <string name="facebook_app_id">341442453725841</string>
    <string name="fb_login_protocol_scheme">fb341442453725841</string>


</resources>