<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/montirProfileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".screen.MontirProfileFragment">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="282dp"
        android:background="@color/themeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/montir_profile_picture_view"
        android:layout_width="152dp"
        android:layout_height="148dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/logoutClicked"
        style="@style/cancelButton"
        android:layout_width="76dp"
        android:layout_height="31dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:text="@string/logout"
        app:cornerRadius="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone_number_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="08982279019"
        android:textColor="#F4F4F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/montir_profile_picture_view">

        <TextView
            android:id="@+id/firstname_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="Firstname "
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#EFEFEF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lastname_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="Lastname"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#EFEFEF"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/camera_upload_button"
        android:layout_width="33dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/montir_profile_picture_view"
        app:layout_constraintEnd_toEndOf="@+id/montir_profile_picture_view"
        app:srcCompat="@drawable/camera" />

    <LinearLayout
        android:id="@+id/profileLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/email" />

            <TextView
                android:id="@+id/email_profile_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_email"
                android:textColor="#1C1C1C"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/pass" />

            <TextView
                android:id="@+id/ktp_profile_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_ktp"
                android:textColor="#1C1C1C"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/born" />

            <TextView
                android:id="@+id/borndate_profile_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_born_date"
                android:textColor="#1C1C1C"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/home" />

            <TextView
                android:id="@+id/address_profile_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_city"
                android:textColor="#1C1C1C"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/profile"
        android:textColor="#202020"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/greentick_view"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="22dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/montir_profile_picture_view"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/updateClicked"
        android:layout_width="33dp"
        android:layout_height="21dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

</androidx.constraintlayout.widget.ConstraintLayout>