<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.UpdateMontirProfileFragment"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    style="@style/viewParent.headerText.NoMode"
                    android:textColor="@color/whiteTextColor"
                    android:text="Update Your Profile"/>

            </RelativeLayout>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textEditFirstname"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editFirstname"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:hint="@string/firstname"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textEditLastname"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editLastname"
                            style="@style/modifiedEditText"
                            android:hint="@string/lastname"
                            android:maxLines="1"
                            android:inputType="textPersonName"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textEditBornDate"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">

                        <EditText
                            android:id="@+id/editBornDate"
                            style="@style/modifiedTextView"
                            android:layout_width="match_parent"
                            android:hint="Born Date"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputGender"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:backgroundTint="@color/primaryTextColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp">
                        <TextView
                            style="@style/parent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/gender"
                            android:textColor="@color/black"
                            android:layout_marginBottom="10dp"/>
                        <Spinner
                            android:layout_marginTop="5dp"
                            android:id="@+id/editGender"
                            style="@style/parent"
                            android:popupBackground="@color/primaryTextColor"
                            android:maxLines="1"
                            android:prompt="@string/gender_prompt"
                            android:entries="@array/gender_arrays"
                            android:textColor="@color/black">
                        </Spinner>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputKTP"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editKTP"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:hint="Nomor KTP"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputAddress"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editAddress"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:hint="Address"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputCity"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editCity"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:hint="@string/city"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editEmail"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:hint="@string/login_email_hint"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobileNumber"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editMobilePhone"
                            style="@style/modifiedEditText"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:hint="Mobile Number"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp">

                        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                            android:id="@+id/cancelUpdateProfileButton"
                            style="@style/cancelButton"
                            android:layout_width="132dp"
                            android:layout_height="37dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:layout_marginEnd="5dp"
                            android:padding="6dp"
                            android:text="@string/cancel"
                            app:color="#FFF"
                            app:cornerRadius="27dp" />

                        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                            android:id="@+id/updateProfileButton"
                            style="@style/registerButton"
                            android:layout_width="132dp"
                            android:layout_height="37dp"
                            app:color="#FFF"
                            android:text="UPDATE"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:padding="6dp"
                            app:cornerRadius="27dp"/>
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="12"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/whiteTextColor"
                    android:layout_weight="3"/>

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/whiteTextColor"
                    android:layout_weight="6"
                    android:textSize="12sp"
                    android:textAlignment="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/whiteTextColor"
                    android:layout_weight="3"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>